# node-libsamplerate

./: .dockerignore  .gitignore  .gitmodules  .npmignore  .prebuildrc  CMakeLists.txt  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md  binding-options.js  binding.gyp  eslint.config.mjs  index.d.ts  index.js  index.ts  package-lock.json  package.json  pkg-prebuilds.d.ts  tsconfig.json
.github/workflows/: build.yml  prebuild.yml
examples/: example.js  waveheader.js
scripts/: pkg-prebuild.js
src/: node-libsamplerate.cc  node-libsamplerate.h
test/: audioGenerator.js  downconvert.test.js  downsample.test.js  event.test.js  misc.test.js  resampleType.test.js  testHelpers.js  upconvert.test.js  upsample.test.js
